removed width because of overflow bug

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,5 @@
 .App {
   min-height: 100vh;
   height: 100%;
-  width: 100vw;
   background: $primary-cream;
 }
